# diskdetector

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
keycheck/src/: main.cpp
modules/: error.cppm  executor.cppm  filesystem.cppm  logging.cppm  mount.cppm  netlink.cppm
onmount/src/: main.cpp
src/: main.cpp
